--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 				hash: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				// plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ Markdown ]
 			});
 		</script>
 	</body>
