--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 		<script src="dist/reveal.js"></script>
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/markdown.esm.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
 		<script>
 			// More info about initialization & config:
@@ -42,8 +41,7 @@
 				hash: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				// plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-				plugins: [ Markdown, RevealHighlight, RevealNotes ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
 		</script>
 	</body>
