--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				// plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-				plugins: [ Markdown, RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
 		</script>
 	</body>
