--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
 			</div>
 		</div>
 
-		<script src="dist/reveal.js"></script>
+		<script src="dist/reveal.esm.js"></script>
 		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/markdown/markdown.esm.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
 		<script>
@@ -43,7 +42,7 @@
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				// plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ Markdown, RevealHighlight, RevealNotes ]
 			});
 		</script>
 	</body>
