updated formatting AGAIN

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				// plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-				plugins: [ RevealMarkdown, RevealNotes ]
+				plugins: [ RevealMarkdown, RevealHighlight ]
 			});
 		</script>
 	</body>
