--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 				hash: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				// plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-				plugins: [ RevealMarkdown, RevealHighlight ]
+				 plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
 		</script>
 	</body>
